--- a/Certificates.html
+++ b/Certificates.html
@@ -169,7 +169,7 @@ h1 {
 
     <div class="column cars">
         <div class="content">
-            <img src="Certificates/CertificatesSharif Front end1.HEIC" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesSharif Front end1.JPG" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Retro</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
@@ -198,14 +198,14 @@ h1 {
     </div>
     <div class="column people">
         <div class="content">
-            <img src="Certificates/CertificatesIAU2.HEIC" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesIAU2.JPG" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Man</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
     </div>
     <div class="column people">
         <div class="content">
-            <img src="Certificates/CertificatesIAU1.HEIC" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesIAU1.JPG" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Woman</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
