--- a/Certificates.html
+++ b/Certificates.html
@@ -131,7 +131,7 @@ h1 {
 <!-- MAIN (Center website) -->
 <div class="main">
 
-<h1>MYLOGO.COM</h1>
+<h1>My Certificates</h1>
 <hr>
 
 <h2>PORTFOLIO</h2>
