--- a/Certificates.html
+++ b/Certificates.html
@@ -134,13 +134,13 @@ h1 {
 <h1>My Certificates</h1>
 <hr>
 
-<h2>PORTFOLIO</h2>
+<h2>Certificates</h2>
 
 <div id="myBtnContainer">
     <button class="btn active" onclick="filterSelection('all')"> Show all</button>
     <button class="btn" onclick="filterSelection('nature')"> NBML</button>
-    <button class="btn" onclick="filterSelection('cars')"> Cars</button>
-    <button class="btn" onclick="filterSelection('people')"> People</button>
+    <button class="btn" onclick="filterSelection('cars')"> ICT CHALLANGE</button>
+    <button class="btn" onclick="filterSelection('people')"> IAU</button>
 </div>
 
 <!-- Portfolio Gallery Grid -->
