--- a/Certificates.html
+++ b/Certificates.html
@@ -205,7 +205,7 @@ h1 {
     </div>
     <div class="column people">
         <div class="content">
-            <img src="Certificates/CertificatesIAU1.jpg" alt="Car" style="width:100% %" onclick="openModal(this)">
+            <img src="Certificates/CertificatesIAU1.jpg" alt="Car" style="width:100% " onclick="openModal(this)">
     <h4></h4>
             <p></p>
         </div>
