--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
             </div>
             <div class="w3-half">
           <td align="center"><video style="width:100%" height:"80%" alt="Northern Lights" class="w3-margin-bottom"  controls >
-      <source src="video/sarinakasaiyan.mp4" type="video/mp4">
+      <source src="video/sarinakasaiyan2.mp4" type="video/mp4">
     </video>
           </div>
         </div>
