--- a/index.html
+++ b/index.html
@@ -157,10 +157,17 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <div class="w3-row-padding" style="margin:0 -16px">
             <div class="w3-half">
-              <img src="images/RoboticBook.jpg" style="width:50% height:50% " alt="Northern Lights" class="w3-margin-bottom">
-            </div>
-            <div class="w3-half">
-          <td align="center"><video style="width:50% height:50% "  alt="Northern Lights" class="w3-margin-bottom"  controls >
+<div style="display: flex; justify-content: center;">
+    <div class="w3-half">
+        <img src="images/RoboticBook.jpg" style="width: 50%; height: auto;" alt="Robotic Book" class="w3-margin-bottom">
+    </div>
+    <div class="w3-half">
+        <video style="width: 50%; height: auto;" controls>
+            <source src="your-video-file.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+</div>
       <source src="video/sarinakasaiyan2.mp4" type="video/mp4">
     </video>
           </div>
