--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
               <img src="images/RoboticBook.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
             </div>
             <div class="w3-half">
-              <img src="video/sarinakasaiyan2.mp4" style="width:100%" alt="Nature" class="w3-margin-bottom">
+             <video>   <img src="video/sarinakasaiyan2.mp4" style="width:100%" alt="Nature" class="w3-margin-bottom">  </video>
+         
           </div>
         </div>
         <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>  Like</button>
