--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
       </div>
 
       <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-        <img src="sarinakasaiyan.jpg.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+        <img src="sarinakasaiyan.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
         <span class="w3-right w3-opacity">16 min</span>
         <h4>Jane Doe</h4><br>
         <hr class="w3-clear">
@@ -177,6 +177,26 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
         <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>  Like</button>
         <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>  Comment</button>
       </div>
+
+
+
+     
+     <div class="container">
+    <div class="item">
+        <img src="images/sarinakasaiyan.jpg" alt="Robotic Book" style="width: 100%; height: auto;">
+    </div>
+    <div class="item">
+        <video controls style="width: 100%; height: auto;">
+            <source src="video/sarinakasaiyan2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+</div>
+
+
+
+
+     
 
       <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
         <img src="images/sarinakasaiyan.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
