--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
       <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
         <img src="images/sarinakasaiyan.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
         <span class="w3-right w3-opacity">1 min</span>
-      <h4>Sarina Kasaiyan</h4><br>
+      <h4>About Me</h4><br>
         <hr class="w3-clear">
         <p>✔️MBTI personality: ENTJ
 
