--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
          <h4 class="w3-center">My Profile</h4>
          <p class="w3-center"><img src="images/sarinakasaiyan.jpg" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
          <hr>
-         <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i>Artificial intelligence | Robotic | Web developer</p>
+         <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i>Artificial intelligence|Robotic|WD </p>
          <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> Tehran, Iran</p>
          <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> March 25, 2000</p>
         </div>
