--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
             <div class="w3-container w3-padding">
               <h6 class="w3-opacity">Hello I'm SARINA</h6>
               <p contenteditable="true" class="w3-border w3-padding">Where ideas Meet Innovation Let's Build Robots </p>
-              <button type="button" class="w3-button w3-theme"><i class="fa fa-pencil"></i> <a href=:sarinakasaiyan@gmail.com </a> </button> 
+              <button type="button" class="w3-button w3-theme"><i class="fa fa-pencil"></i>sarinakasaiyan@gmail.com </button> 
             </div>
           </div>
         </div>
