--- a/index.html
+++ b/index.html
@@ -246,6 +246,68 @@ I am currently a master's student in artificial intelligence, having completed m
         <h4>Angie Jane</h4><br>
         <hr class="w3-clear">
         <p>Have you seen this?</p>
+
+
+
+
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>دو ویدئو در کنار هم</title>
+    <style>
+        .container {
+            display: flex; /* استفاده از فلکس باکس برای چیدمان */
+            justify-content: center; /* مرکز کردن ویدئوها */
+            align-items: center; /* تراز کردن عمودی */
+            margin: 20px; /* حاشیه دور کانتینر */
+        }
+
+        .video-item {
+            margin: 10px; /* فاصله بین ویدئوها */
+            flex: 1; /* اجازه به ویدئوها برای رشد مساوی */
+            max-width: 400px; /* حداکثر عرض برای هر ویدئو */
+        }
+
+        video {
+            width: 100%; /* ویدئو به صورت پاسخگو باشد */
+            height: auto; /* حفظ نسبت ابعاد */
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column; /* چیدمان عمودی در صفحه‌های کوچک‌تر */
+            }
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <div class="video-item">
+        <video controls>
+            <source src="video1.mp4" type="video/mp4">
+            مرورگر شما از تگ ویدئو پشتیبانی نمی‌کند.
+        </video>
+    </div>
+    <div class="video-item">
+        <video controls>
+            <source src="video2.mp4" type="video/mp4">
+            مرورگر شما از تگ ویدئو پشتیبانی نمی‌کند.
+        </video>
+    </div>
+</div>
+
+</body>
+</html>
+
+
+
+
+
+
+       
         <img src="/w3images/nature.jpg" style="width:100%" class="w3-margin-bottom">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>  Like</button> 
