--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@ I am currently a master's student in artificial intelligence, having completed m
 <div class="container">
     <div class="video-item">
         <video controls>
-            <source src="video1.mp4" type="video/mp4">
+            <source src="video/sarinakasaiyan3.mp4" type="video/mp4">
             مرورگر شما از تگ ویدئو پشتیبانی نمی‌کند.
         </video>
     </div>
     <div class="video-item">
         <video controls>
-            <source src="video2.mp4" type="video/mp4">
+            <source src="video/sarinakasaiyan.mp4" type="video/mp4">
             مرورگر شما از تگ ویدئو پشتیبانی نمی‌کند.
         </video>
     </div>
