--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@ I am currently a master's student in artificial intelligence, having completed m
       <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
         <img src="images/sarinakasaiyan.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
         <span class="w3-right w3-opacity">32 min</span>
-        <h4>Angie Jane</h4><br>
+        <h4>Interview of inventions in Kamand event</h4><br>
         <hr class="w3-clear">
-        <p>Have you seen this?</p>
+        <p>Visit this link to buy the book</p><a hreaf="https://lnkd.in/ewj-G_-m"></a>
 
 
 
