--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ I am currently a master's student in artificial intelligence, having completed m
         <span class="w3-right w3-opacity">32 min</span>
         <h4>Interview of inventions in Kamand event</h4><br>
         <hr class="w3-clear">
-        <p>Visit this link to buy the book</p><a hreaf="https://lnkd.in/ewj-G_-m"></a>
+        <p>You can buy my book from gisoom website:</p><a hreaf="https://lnkd.in/ewj-G_-m"></a>
 
 
 
@@ -309,8 +309,16 @@ I am currently a master's student in artificial intelligence, having completed m
 
        
         <img src="/w3images/nature.jpg" style="width:100%" class="w3-margin-bottom">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>  Like</button> 
+<p>
+ "Line Follower Robot🚜" 
+
+This book, written in the C programming language, helps you enhance your skills in mechanics, electronics, and programming. By studying this book, you can design and implement a line-following robot using an IR sensor and gain a solid understanding of the C programming language and various sensors, especially ultrasonic and IR sensors.
+
+The book includes all the necessary instructions for building a robot capable of moving forward, backward, and turning. All movements and related programming are explained in detail. Additionally, by watching the educational videos, you will better understand the steps to build the robot.
+
+This book is a great opportunity to assess your abilities and identify your interests in robotics and electronics. 💡🤖
+</p> 
+       <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>  Like</button> 
         <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>  Comment</button> 
       </div> 
       
