--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ I am currently a master's student in artificial intelligence, having completed m
         <span class="w3-right w3-opacity">32 min</span>
         <h4>Interview of inventions in Kamand event</h4><br>
         <hr class="w3-clear">
-        <p>You can buy my book from gisoom website:</p><a hreaf="https://lnkd.in/ewj-G_-m"></a>
+        <p>You can buy my book from gisoom website:</p> <a href="https://lnkd.in/ewj-G_-m"></a>
 
 
 
