--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ This book is a great opportunity to assess your abilities and identify your inte
 <!-- End Page Container -->
 </div>
 <br>
-
+<center>
 <!-- Footer -->
 <footer class="w3-container w3-theme-d3 w3-padding-16">
   <h5>Footer</h5>
@@ -381,7 +381,7 @@ This book is a great opportunity to assess your abilities and identify your inte
 
 <footer class="" target="_blank">sarinakasaiyan</a></p>
 </footer>
- 
+ </center>
 <script>
 // Accordion
 function myFunction(id) {
