--- a/index.html
+++ b/index.html
@@ -402,13 +402,13 @@ This book is a great opportunity to assess your abilities and identify your inte
     </div>
 
     <div class="w3-third w3-serif">
-      <h3>POPULAR TAGS</h3>
+      <h3>My skills</h3>
       <p>
-        <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Dinner</span>
-        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Salmon</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">France</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Drinks</span>
-        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Flavors</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Cuisine</span>
-        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Chicken</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Dressing</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Fried</span>
-        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Fish</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Duck</span>
+        <span class="w3-tag w3-black w3-margin-bottom">Artificial intelligence Specialist (AI) </span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Robotic</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Web developer</span>
+        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Front-end</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Back-end</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Word Press</span>
+        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Search Engine Optimization (SEO)</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Machine Learning (ML)</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Deep Learning (DL)</span>
+        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Natural Language Processing (NLP)</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Data Scientist</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"> Software Engineer</span>
+        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">python programming</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">C programming</span>
       </p>
     </div>
   </footer>
