--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ This book is a great opportunity to assess your abilities and identify your inte
 <!-- Footer -->
 <footer class="w3-container w3-dark-grey" style="padding:32px">
   <a href="#" class="w3-button w3-black w3-padding-large w3-margin-bottom"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <p>Powered by <a href="https://www.linkedin.com/feed/" target="_blank">Brainstorm: Turn Ideas into Reality with Artificial Intelligence :)</a></p>
 </footer>
 
 
