--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@ This book is a great opportunity to assess your abilities and identify your inte
       <h3>BLOG POSTS</h3>
       <ul class="w3-ul w3-hoverable">
         <li class="w3-padding-16">
-          <img src="/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px">
-          <span class="w3-large">Lorem</span><br>
-          <span>Sed mattis nunc</span>
+          <img src="images/AI LAB.png" class="w3-left w3-margin-right" style="width:50px">
+          <span class="w3-large">Artificial intelligence laboratory</span><br>
+          <span>Robotic,Web developer</span>
         </li>
         <li class="w3-padding-16">
           <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
@@ -420,7 +420,7 @@ This book is a great opportunity to assess your abilities and identify your inte
 <!-- Footer -->
 <footer class="w3-container w3-dark-grey" style="padding:32px">
   <a href="#" class="w3-button w3-black w3-padding-large w3-margin-bottom"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <p> <a href="" target="_blank">Brainstorm: Turn Ideas into Reality with Artificial Intelligence</a></p>
+  <p> Brainstorm: Turn Ideas into Reality with Artificial Intelligence</p>
 </footer>
 
 
