--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ This book is a great opportunity to assess your abilities and identify your inte
     </div>
   
     <div class="w3-third">
-      <h3>BLOG POSTS</h3>
+      <h3>My recent work</h3>
       <ul class="w3-ul w3-hoverable">
         <li class="w3-padding-16">
           <img src="images/AI LAB.png" class="w3-left w3-margin-right" style="width:50px">
@@ -395,7 +395,7 @@ This book is a great opportunity to assess your abilities and identify your inte
         </li>
         <li class="w3-padding-16">
           <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
-          <span class="w3-large">Ipsum</span><br>
+          <span class="w3-large">NBML</span><br>
           <span>Praes tinci sed</span>
         </li> 
       </ul>
