--- a/index.html
+++ b/index.html
@@ -394,9 +394,9 @@ This book is a great opportunity to assess your abilities and identify your inte
           <span>Robotic,Web developer</span>
         </li>
         <li class="w3-padding-16">
-          <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
+          <img src="images/NBML.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">NBML</span><br>
-          <span>Praes tinci sed</span>
+          <span>Researcher</span>
         </li> 
       </ul>
     </div>
