--- a/index.html
+++ b/index.html
@@ -380,9 +380,18 @@ This book is a great opportunity to assess your abilities and identify your inte
   <!-- Footer -->
   <footer class="w3-row-padding w3-padding-32">
     <div class="w3-third">
-      <h3>FOOTER</h3>
-      <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+      <h3>Web Develope</h3>
+      <p>The sites I developed are active on the Internet
+</p>
+<p>
+
+- https://ai-lab-tnb.com
+- https://www.metadaru.com
+- https://kiyanet.ir
+- https://sangesarshop.ir
+-https://keymode.com 
+ 
+</p>
     </div>
   
     <div class="w3-third">
