--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ I am currently a master's student in artificial intelligence, having completed m
 
 
        
-        <img src="/w3images/nature.jpg" style="width:100%" class="w3-margin-bottom">
+        <img src="images/RoboticBook.jpg" style="width:100%" class="w3-margin-bottom">
 <p>
  "Line Follower Robot🚜" 
 
