--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
  <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"><i class="fa fa-home w3-margin-right"></i>SARINA</a>
-  <a href="Projects.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Projects"><i class="fa fa-globe">Projects</i></a>
+  <a href="Projects.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Projects"><i class="fa fa-globe"></i></a>
   <a href="Certificates.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Certificates"><i class="fa fa-user"></i>Certificates</a>
-  <a href="Robotics.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Robotics"><i class="fa fa-envelope">Robotics</i></a>
+  <a href="Robotics.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Robotics"><i class="fa fa-envelope"></i></a>
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button w3-padding-large" title="Notifications"><i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:300px">
-      <a href="#" class="w3-bar-item w3-button">One new friend request</a>
-      <a href="#" class="w3-bar-item w3-button">John Doe posted on your wall</a>
-      <a href="#" class="w3-bar-item w3-button">Jane likes your post</a>
+      <a href="#" class="w3-bar-item w3-button"></a>
+      <a href="#" class="w3-bar-item w3-button"></a>
+      <a href="#" class="w3-bar-item w3-button"></a>
     </div>
   </div>
   <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account">
@@ -223,7 +223,7 @@ I am currently a master's student in artificial intelligence, having completed m
 
 
        
-        <h4>Jane Doe</h4><br>
+        <h4>sarinakasaiyan</h4><br>
         <hr class="w3-clear">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>  Like</button>
