--- a/index.html
+++ b/index.html
@@ -385,19 +385,23 @@ This book is a great opportunity to assess your abilities and identify your inte
 </p>
 <p>
 
-- https://ai-lab-tnb.com
+ <a href="https://ai-lab-tnb.com" class="w3-bar-item w3-button w3-padding-large"></a> 
 </p>
      <p>
-- https://www.metadaru.com
+       <a href=" https://www.metadaru.com" class="w3-bar-item w3-button w3-padding-large"></a> 
+
+
       </p>
      <p>
-- https://kiyanet.ir
+       <a href=" https://kiyanet.ir" class="w3-bar-item w3-button w3-padding-large"></a> 
       </p>
      <p>
-- https://sangesarshop.ir
+             <a href=" https://sangesarshop.ir" class="w3-bar-item w3-button w3-padding-large"></a> 
+
       </p>
      <p>
--https://keymode.com 
+                   <a href=" https://keymode.com " class="w3-bar-item w3-button w3-padding-large"></a> 
+
  
 </p>
     </div>
