--- a/index.html
+++ b/index.html
@@ -329,11 +329,13 @@ This book is a great opportunity to assess your abilities and identify your inte
     <div class="w3-col m2">
       <div class="w3-card w3-round w3-white w3-center">
         <div class="w3-container">
-          <p>Upcoming Events:</p>
-          <img src="images/sarinakasaiyan.jpg" alt="Forest" style="width:100%;">
-          <p><strong>Holiday</strong></p>
+          <p>My recent research</p>
+          <img src="images/Planetary exploration with robot teams.png" alt="Forest" style="width:100%;">
+          <p><strong>Planetary exploration 
+ with robot teams 
+</strong></p>
           <p>Friday 15:00</p>
-          <p><button class="w3-button w3-block w3-theme-l4">Info</button></p>
+          <p><a href="https://d1wqtxts1xzle7.cloudfront.net/98370215/St-Onge_20D_202019_2019351-libre.pdf?1675790135=&response-content-disposition=inline%3B+filename%3DPlanetary_Exploration_With_Robot_Teams_I.pdf&Expires=1733075154&Signature=hMu8F12F7JKdDjZepG0-lGA4mWWges-bjiWZA-9Kwyw0xBme-C5xO5hpBOdhwaepxlksrLVdh0UH4MhLH6i~lBCq9uF91AzndJUtq6Pb3lzmanbClfn9uJe3EaCXMxbttF1Xv9wBh20sC9t5DBEbplaK6SeJH-yD0zbVlAiVmvJiIs0vfS6JOHqaNP7UvEn5JPsUlELc-lf6VxpsflcsaiXfwHqXJinxKRZojELmE3zRSlDoSSCNokjBdzaojK5GGO1B1zEJ78nbX-5YSn-jSqkSxNtF3stz6JJbRok~H3VNJ4~gr9GZcMZ2vHm08zdYbDSvoa7JLSr7ZofuReIjMw__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA"button class="w3-button w3-block w3-theme-l4">Info</button></p></a>
         </div>
       </div>
       <br>
