--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
             <div class="w3-container w3-padding">
               <h6 class="w3-opacity">Hello I'm SARINA</h6>
               <p contenteditable="true" class="w3-border w3-padding">Where ideas Meet Innovation Let's Build Robots </p>
-              <button type="button" class="w3-button w3-theme"><i class="fa fa-pencil"></i>sarinakasaiyan@gmail.com </button> 
+              <button type="button" class="w3-button w3-theme"><i class="fa fa-pencil"></i> <a href="sarinakasaiyan@gmail.com"</a> </button> 
             </div>
           </div>
         </div>
@@ -387,22 +387,22 @@ This book is a great opportunity to assess your abilities and identify your inte
 </p>
 <p>
 
- <a href="https://ai-lab-tnb.com" class="w3-bar-item w3-button w3-padding-large"></a> 
+ <a href="https://ai-lab-tnb.com" class="w3-bar-item w3-button w3-padding-large">AI-LAB-TNB</a> 
 </p>
      <p>
-       <a href=" https://www.metadaru.com" class="w3-bar-item w3-button w3-padding-large"></a> 
+       <a href=" https://www.metadaru.com" class="w3-bar-item w3-button w3-padding-large">metadaru</a> 
 
 
       </p>
      <p>
-       <a href=" https://kiyanet.ir" class="w3-bar-item w3-button w3-padding-large"></a> 
+       <a href=" https://kiyanet.ir" class="w3-bar-item w3-button w3-padding-large">kiyanet</a> 
       </p>
      <p>
-             <a href=" https://sangesarshop.ir" class="w3-bar-item w3-button w3-padding-large"></a> 
+             <a href=" https://sangesarshop.ir" class="w3-bar-item w3-button w3-padding-large">sangesarshop</a> 
 
       </p>
      <p>
-                   <a href=" https://keymode.com " class="w3-bar-item w3-button w3-padding-large"></a> 
+                   <a href=" https://keymode.com " class="w3-bar-item w3-button w3-padding-large">keymode</a> 
 
  
 </p>
