--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
               <h6 class="w3-opacity">Hello I'm SARINA</h6>
               <p contenteditable="true" class="w3-border w3-padding">Where ideas Meet Innovation Let's Build Robots </p>
               <button type="button" class="w3-button w3-theme"><i class="fa fa-pencil"></i> <a href="sarinakasaiyan@gmail.com"</a> </button> 
+
+             <button type="button" class="w3-button w3-theme">
+    <a href="mailto:sarinakasaiyan@gmail.com" style="color: white; text-decoration: none;">
+        <i class="fa fa-pencil"></i> ارسال ایمیل
+    </a>
+</button>
+                    <a href="sarinakasaiyan@gmail.com" class="w3-bar-item w3-button w3-padding-large">Gmail</a> 
+
             </div>
           </div>
         </div>
