--- a/index.html
+++ b/index.html
@@ -341,22 +341,22 @@ This book is a great opportunity to assess your abilities and identify your inte
  with robot teams 
 </strong></p>
           <p>Friday 15:00</p>
-          <p><a href="https://d1wqtxts1xzle7.cloudfront.net/98370215/St-Onge_20D_202019_2019351-libre.pdf?1675790135=&response-content-disposition=inline%3B+filename%3DPlanetary_Exploration_With_Robot_Teams_I.pdf&Expires=1733075154&Signature=hMu8F12F7JKdDjZepG0-lGA4mWWges-bjiWZA-9Kwyw0xBme-C5xO5hpBOdhwaepxlksrLVdh0UH4MhLH6i~lBCq9uF91AzndJUtq6Pb3lzmanbClfn9uJe3EaCXMxbttF1Xv9wBh20sC9t5DBEbplaK6SeJH-yD0zbVlAiVmvJiIs0vfS6JOHqaNP7UvEn5JPsUlELc-lf6VxpsflcsaiXfwHqXJinxKRZojELmE3zRSlDoSSCNokjBdzaojK5GGO1B1zEJ78nbX-5YSn-jSqkSxNtF3stz6JJbRok~H3VNJ4~gr9GZcMZ2vHm08zdYbDSvoa7JLSr7ZofuReIjMw__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA"button class="w3-button w3-block w3-theme-l4">Info</button></p></a>
+          <p><a href="https://d1wqtxts1xzle7.cloudfront.net/98370215/St-Onge_20D_202019_2019351-libre.pdf?1675790135=&response-content-disposition=inline%3B+filename%3DPlanetary_Exploration_With_Robot_Teams_I.pdf&Expires=1733075154&Signature=hMu8F12F7JKdDjZepG0-lGA4mWWges-bjiWZA-9Kwyw0xBme-C5xO5hpBOdhwaepxlksrLVdh0UH4MhLH6i~lBCq9uF91AzndJUtq6Pb3lzmanbClfn9uJe3EaCXMxbttF1Xv9wBh20sC9t5DBEbplaK6SeJH-yD0zbVlAiVmvJiIs0vfS6JOHqaNP7UvEn5JPsUlELc-lf6VxpsflcsaiXfwHqXJinxKRZojELmE3zRSlDoSSCNokjBdzaojK5GGO1B1zEJ78nbX-5YSn-jSqkSxNtF3stz6JJbRok~H3VNJ4~gr9GZcMZ2vHm08zdYbDSvoa7JLSr7ZofuReIjMw__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA"button class="w3-button w3-block w3-theme-l4">Download the article</button></p></a>
         </div>
       </div>
       <br>
       
       <div class="w3-card w3-round w3-white w3-center">
         <div class="w3-container">
-          <p>Friend Request</p>
-          <img src="images/sarinakasaiyan.jpg" alt="Avatar" style="width:50%"><br>
-          <span>Jane Doe</span>
+          <p>My recent research</p>
+          <img src="images/Deep multi-task learning structure for segmentation and classification of supratentorial brain tumors in MR images.png" alt="Avatar" style="width:50%"><br>
+          <span>Deep multi-task learning structure for segmentation and classification of supratentorial brain tumors in MR images</span>
           <div class="w3-row w3-opacity">
             <div class="w3-half">
               <button class="w3-button w3-block w3-green w3-section" title="Accept"><i class="fa fa-check"></i></button>
             </div>
             <div class="w3-half">
-              <button class="w3-button w3-block w3-red w3-section" title="Decline"><i class="fa fa-remove"></i></button>
+          <p><a href="https://pdf.sciencedirectassets.com/306126/1-s2.0-S2214751923X00048/1-s2.0-S2214751923002141/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEAEaCXVzLWVhc3QtMSJGMEQCIBa2LiRb0XZsqh7V%2Bh7Y2hmnZCmZdtmBVelsMy%2BNwhfEAiBBgnVKEpyh4xcv5scX1dvQq6yEBwxcFaU9jWhs0Pg64Sq7BQiq%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F8BEAUaDDA1OTAwMzU0Njg2NSIMnTEpJDibs3Tj2BEeKo8FVs2GIo3aqTJajVxNKpO0U7shqOzqcTQMGfLZUVE%2BccL%2BR6v5hKMtZGh3ilVBdexKcLaQBUl%2BQe3uFb%2FNj7FIEr0de06n9COM0XXctnDZR8Mc1sZBin5IWQGgBmtkF59hkvOYNam7pwpaFA0zApvUSOn5hiNODRzjR31M9DN3co8lXNNmUHJ4%2FxFAV4WRrNno5cFmmD0rE6ZsXXWmjRr%2FveAFX%2BPpRdp7p3CRY0skRedqtjNxsML%2FAtMQXUrRDA3gHKnCKtkWSxXAasmDd6C%2FukQYV%2FCfiRUYcBani1YUEzar3xIPRO38TFpBPyWCIGTjsHoSor79tZiinaBKUeX4LIUsNQXmi4KV1T%2FgrVgXQ%2B6ex8o6eDbm2rz4wu5abSDRmGHvLhqWSOZjhlWLdCTKI5vrTOMcj2o8%2BIFCKJbVJGhBxQGx7qyc22MnbBxGZ3g5WgUW6969P0xf7C%2BNj7pitqvmkmFUYhUJXjTPfKukBB7Ihoi28RpUFmyN1OTwEtxrLpYa%2B37ObjJmSqXnbkCFfxK5O8W8zT2ysxa0WQZdN2JFJOwcRU3L4HoLoNF%2Fw7NrRfZ%2BuFM23jljTwhD4792iK6uPNt7aW9QHPFdgByXgF%2F%2BfrHHNFn1kB4a0X%2FVXv9A1PwPIMzaDt%2FHmOLnRB2VIEF2ZOsW0FXVMqnXnZgYMXLoIvNDxGqt3qVEdPI9WAHlzqWpzW7N1a%2BWpPOLAW3oQi3zIvE2sgaLv6ef8P0V4I1dOm85qFnzsT1U9E8oc7f%2B22NT2rJlU0EiUfPgh0FynY9LWhaTYtGy5h0pL2wZ7VQfsWp3jiFxHqkKSTKcvncW5bSqsCRowsN2XQ6Md0S2DOb%2FO1cpUbwaBvi1Y1m7MTDVnbK6BjqyAcvvv006yB3u48BD6yTRIkJxq%2BjQP%2FH0yaz0Z%2BgG%2F2miTRH6M0qTcp4gBh%2FghUl0dYrD%2FTxRJWcQXSmt5nn5vMnoM42Wf6es3NUvMnFGnMwz5X6xb7JbPQ9haJ9MWRpRcQUoGoWdvAgJWopr%2Fw6Wo70ztdBEACGDJelspIkT3GSBkMJFZtKY9NT41JIXKxeU7TeNSl0K1sJXH9CtmDJCxZcUSaCbnLj8Mu%2FSYn%2Bd75n7tDI%3D&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20241201T171852Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYUGLSJRB6%2F20241201%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=93cb452c0ff73326063cd93968de6582b5a4ed9615f98e71d03a70a1e1ce010b&hash=a36d960c079a2b715a82d0793d7d422e3055f406b253db95fb9467cbd9d21ff7&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S2214751923002141&tid=spdf-b6d8c190-776b-4d25-bddd-c090a13ea27b&sid=f4fa44fc22e150450909d0b0b9064a231b8dgxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=131458060c540400520306&rr=8eb4bd2adf29a01d&cc=ir"button class="w3-button w3-block w3-theme-l4">Download the article</button></p></a>
             </div>
           </div>
         </div>
