--- a/index.html
+++ b/index.html
@@ -356,6 +356,8 @@ This book is a great opportunity to assess your abilities and identify your inte
           <div class="w3-row w3-opacity">
             <div class="w3-half">
               <button class="w3-button w3-block w3-green w3-section" title="Accept"><i class="fa fa-check"></i></button>
+                           <button class="w3-button w3-block w3-red w3-section" title="Decline"><i class="fa fa-remove"></i></button>
+
             </div>
             <div class="w3-half">
             </div>
@@ -365,9 +367,7 @@ This book is a great opportunity to assess your abilities and identify your inte
 
       <div class="w3-card w3-round w3-white w3-center">
         <div class="w3-container">
-          <p>Friend Request</p>
-          <img src="sarinakasaiyan.jpg" alt="Avatar" style="width:50%"><br>
-          <span>Jane Doe</span>
+        
           <div class="w3-row w3-opacity">
             <div class="w3-half">
               <button class="w3-button w3-block w3-green w3-section" title="Accept"><i class="fa fa-check"></i></button>
