--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ I am currently a master's student in artificial intelligence, having completed m
       </div>
 
       <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-        <img src="sarinakasaiyan.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+        <img src="images/Certificates.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
         <span class="w3-right w3-opacity">16 min</span>
 
 
