--- a/Certificates.html
+++ b/Certificates.html
@@ -190,26 +190,23 @@ h1 {
         </div>
     </div>
 
-    <!-- Adjusted the last three images to maintain uniformity -->
     <div class="column people">
         <div class="content">
-            <img src="Certificates/CertificatesManuscript Submission Skills1.png" alt="Manuscript Submission Skills Certificate" style="width:100%; height:auto;" onclick="openModal(this)">
+            <img src="Certificates/CertificatesManuscript Submission Skills1.png" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4></h4>
             <p></p>
         </div>
     </div>
-
     <div class="column people">
         <div class="content">
-            <img src="Certificates/CertificatesIAU2.jpg" alt="IAU Certificate" style="width:100%; height:auto;" onclick="openModal(this)">
+            <img src="Certificates/CertificatesIAU2.jpg" alt="Car" style="width:100% " onclick="openModal(this)">
              <h4></h4>
             <p></p>
         </div>
     </div>
-
     <div class="column people">
         <div class="content">
-            <img src="Certificates/CertificatesIAU1.jpg" alt="IAU Certificate" style="width:100%; height:auto;" onclick="openModal(this)">
+            <img src="Certificates/CertificatesIAU1.jpg" alt="Car" style="width:100% " onclick="openModal(this)">
                 <h4></h4>
                 <p></p>
         </div>
