--- a/Certificates.html
+++ b/Certificates.html
@@ -184,7 +184,7 @@ h1 {
     </div>
     <div class="column cars">
         <div class="content">
-            <img src="Certificates/CertificatesCovid19_1.jpg " alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesCovid19 1.jpg " alt="Car" style="width:100%" onclick="openModal(this)">
             <h4></h4>
             <p></p>
         </div>
