--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
         <hr class="w3-clear">
 
 
-        <p>✔️MBTI personality: ENTJ. I am currently a master's student in artificial intelligence from [University of Tehran Shomal] (https://www.iau.ir/en), having completed my bachelor's degree in computer engineering. My specialty lies in robotics, and I work as a robotics instructor. Additionally, I am a skilled website designer and programmer. I possess strong expertise in content presentation and crisis management. Furthermore, I have experience as an internet sales expert within a company. I am also a trader, leveraging my analytical skills in the financial markets.
+        <p>✔️MBTI personality: ENTJ. I am currently a master's student in artificial intelligence from [University of Tehran Shomal]  (https://www.ufl.edu) (https://www.iau.ir/en), having completed my bachelor's degree in computer engineering. My specialty lies in robotics, and I work as a robotics instructor. Additionally, I am a skilled website designer and programmer. I possess strong expertise in content presentation and crisis management. Furthermore, I have experience as an internet sales expert within a company. I am also a trader, leveraging my analytical skills in the financial markets.
 
 </p>
 
