--- a/index.html
+++ b/index.html
@@ -150,7 +150,11 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
     </a>
 </button>
 
-
+    </div>
+          </div>
+        </div>
+      </div>
+      
 
 
 
