--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
          <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i>Artificial intelligence|Robotic|WD </p>
          <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> Tehran, Iran</p>
          <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> March 25, 2000</p>  
+
+         <center>
+<!-- Add font awesome icons -->
+<a href="#" class="fa fa-github"></a>
+<a href="#" class="fa fa-linkedin"></a>
+<a href="#" class="fa fa-stack-overflow"></a>
+<a href="#" class="fa fa-google"></a>
+</center>
+
+         
         </div>
       </div>
       <br>
