--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
 
          <center>
 <!-- Add font awesome icons -->
-<a href="#" class="fa fa-github"></a>
-<a href="#" class="fa fa-linkedin"></a>
-<a href="#" class="fa fa-stack-overflow"></a>
-<a href="#" class="fa fa-google"></a>
+<a href="https://github.com/Sarinakasaiyan" class="fa fa-github"></a>
+<a href="https://www.linkedin.com/in/sarina-kasaiyan/" class="fa fa-linkedin"></a>
+<a href="https://stackoverflow.com/users/28948358/sarinakasaiyan" class="fa fa-stack-overflow"></a>
+<a href="https://huggingface.co/sarinazkasaiayn" class="fa fa-Huggingface"></a>
+ <a href="https://sarinakasaiayn@gmail.com" class="fa fa-Gmail"></a>
+
 </center>
 
          
