--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
         <div class="w3-col m12">
           <div class="w3-card w3-round w3-white">
             <div class="w3-container w3-padding">
-              <h6 class="w3-opacity">Contact</h6>
+              <h6 class="w3-opacity">SARINA</h6>
               <p contenteditable="true" class="w3-border w3-padding">Where ideas Meet Innovation Let's Build Robots </p>
              <button type="button" class="w3-button w3-theme">
     <a href="mailto:sarinakasaiyan@gmail.com" style="color: white; text-decoration: none;">
