--- a/index.html
+++ b/index.html
@@ -260,7 +260,6 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
 
 
    <hr class="w3-clear">
-        <p>You can buy my book from gisoom website:<a href="https://lnkd.in/ewj-G_-m" class="w3-bar-item w3-button w3-padding-large">gisoom website</a>  
  </p>
 
 
@@ -306,12 +305,35 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
             مرورگر شما از تگ ویدئو پشتیبانی نمی‌کند.
         </video>
     </div>
-    <div class="video-item">
-        <video controls>
-            <source src="video/sarinakasaiyan.mp4" type="video/mp4">
-            مرورگر شما از تگ ویدئو پشتیبانی نمی‌کند.
-        </video>
-    </div>
+<p>
+
+ I'm excited to share my research project on machine translation models with you! 🇩🇪🇫🇷
+
+Google Translate
+
+Recently, I conducted a comparative study between T5 and Marian models for translating from English to French and German. This project allowed me to delve deep into the field of natural language processing and evaluate translation quality using the METEOR metric.
+
+Key project highlights:
+- Implementation and comparison of T5 and Marian models
+- Analysis of translation accuracy and execution time
+- Utilization of NLTK and Transformers libraries for natural language processing tasks
+- Gaining hands-on experience in tokenization and fine-tuning models
+
+I would like to thank my supervisor, Nava Eslami, for her guidance and support throughout this project. Her expertise in natural language processing has been invaluable to my learning.
+
+For more details about this research project, you can read the article I worked with on Medium:
+https://lnkd.in/d2s2YVcu
+
+The complete project code is also available on my GitHub:
+https://lnkd.in/dPUDCH_p
+
+I'm eagerly looking forward to continuing my exploration of the fascinating world of natural language processing and machine translation. If you're interested in collaboration or further discussion in this field, I'd be happy to connect with you!
+
+#NaturalLanguageProcessing #MachineLearning #TranslationTechnology #NLPResearch #AIinTranslation #DataScience #T5Model #MarianModel #NLTK #Transformers
+
+Citations:
+[1] https://ppl-ai-file-upload.s3.amazonaws.com/web/direct-files/43812316/07ec2634-decd-46b2-a1a8-09ea3626476e/Document-nlp-google-translate.pdf
+</p>
 </div>
 
 </body>
