--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
 
 
    <hr class="w3-clear">
+
+               <p>You can buy my code from Github:<a href="https://github.com/Sarinakasaiyan/GoogleTranslate/blob/Natural-Language-Processing-NLP-Tokenization/GoogleTranslateNLP.ipynb" class="w3-bar-item w3-button w3-padding-large">Github</a>  
+
  </p>
 
 
@@ -331,8 +334,7 @@ I'm eagerly looking forward to continuing my exploration of the fascinating worl
 
 #NaturalLanguageProcessing #MachineLearning #TranslationTechnology #NLPResearch #AIinTranslation #DataScience #T5Model #MarianModel #NLTK #Transformers
 
-Citations:
-[1] https://ppl-ai-file-upload.s3.amazonaws.com/web/direct-files/43812316/07ec2634-decd-46b2-a1a8-09ea3626476e/Document-nlp-google-translate.pdf
+
 </p>
 </div>
 
