--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
 
 
        
-        <h4>Natural Language Processin NLP=NLU+NLG</h4><br>
+        <h4>Natural Language Processing NLP=NLU+NLG</h4><br>
         <hr class="w3-clear">
         <p></p>
 
