--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
 
    <hr class="w3-clear">
 
-               <p>You can buy my code from Github:<a href="https://github.com/Sarinakasaiyan/GoogleTranslate/blob/Natural-Language-Processing-NLP-Tokenization/GoogleTranslateNLP.ipynb" class="w3-bar-item w3-button w3-padding-large">Github</a>  
+               <p>You can download my code from Github:<a href="https://github.com/Sarinakasaiyan/GoogleTranslate/blob/Natural-Language-Processing-NLP-Tokenization/GoogleTranslateNLP.ipynb" class="w3-bar-item w3-button w3-padding-large">Github</a>  
 
  </p>
 
