--- a/index.html
+++ b/index.html
@@ -515,13 +515,13 @@ This book is a great opportunity to assess your abilities and identify your inte
 <div class="container">
     <div class="video-item">
         <video controls>
-            <source src="images/IMG_6638.HEIC" type="video/mp4">
+        <img src="images/Certificates.jpg" style="width:100%" class="w3-margin-bottom">
             مرورگر شما از تگ ویدئو پشتیبانی نمی‌کند.
         </video>
     </div>
     <div class="video-item">
         <video controls>
-            <source src="images/IMG_66ی38.HEIC" type="video/mp4">
+        <img src="images/Certificates.jpg" style="width:100%" class="w3-margin-bottom">
             مرورگر شما از تگ ویدئو پشتیبانی نمی‌کند.
         </video>
     </div>
