--- a/index.html
+++ b/index.html
@@ -471,73 +471,23 @@ This book is a great opportunity to assess your abilities and identify your inte
       <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
         <img src="images/sarinakasaiyan.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
         <span class="w3-right w3-opacity">32 min</span>
-        <h4>Interview of inventions in Kamand event</h4><br>
+        <h4>poster event</h4><br>
         <hr class="w3-clear">
-        <p>You can buy my book from gisoom website:<a href="https://lnkd.in/ewj-G_-m" class="w3-bar-item w3-button w3-padding-large">gisoom website</a>  
  </p>
 
 
 
-<!DOCTYPE html>
-<html lang="fa">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>دو ویدئو در کنار هم</title>
-    <style>
-        .container {
-            display: flex; /* استفاده از فلکس باکس برای چیدمان */
-            justify-content: center; /* مرکز کردن ویدئوها */
-            align-items: center; /* تراز کردن عمودی */
-            margin: 20px; /* حاشیه دور کانتینر */
-        }
 
-        .video-item {
-            margin: 10px; /* فاصله بین ویدئوها */
-            flex: 1; /* اجازه به ویدئوها برای رشد مساوی */
-            max-width: 400px; /* حداکثر عرض برای هر ویدئو */
-        }
 
-        video {
-            width: 100%; /* ویدئو به صورت پاسخگو باشد */
-            height: auto; /* حفظ نسبت ابعاد */
-        }
 
-        @media (max-width: 768px) {
-            .container {
-                flex-direction: column; /* چیدمان عمودی در صفحه‌های کوچک‌تر */
-            }
-        }
-    </style>
-</head>
-<body>
 
-<div class="container">
-    <div class="video-item">
-        <video controls>
+
+
+               <img src="images/sarina-.png" style="width:100%" class="w3-margin-bottom">
+
         <img src="images/sarina.png" style="width:100%" class="w3-margin-bottom">
-            مرورگر شما از تگ ویدئو پشتیبانی نمی‌کند.
-        </video>
-    </div>
-    <div class="video-item">
-        <video controls>
-        <img src="images/sarina-.png" style="width:100%" class="w3-margin-bottom">
-            مرورگر شما از تگ ویدئو پشتیبانی نمی‌کند.
-        </video>
-    </div>
-</div>
 
-</body>
-</html>
-
-
-
-
-
-
-       
-        <img src="images/Certificates.jpg" style="width:100%" class="w3-margin-bottom">
-<p>
+       <p>
  "Line Follower Robot🚜" 
 
 This book, written in the C programming language, helps you enhance your skills in mechanics, electronics, and programming. By studying this book, you can design and implement a line-following robot using an IR sensor and gain a solid understanding of the C programming language and various sensors, especially ultrasonic and IR sensors.
