--- a/index.html
+++ b/index.html
@@ -483,9 +483,9 @@ This book is a great opportunity to assess your abilities and identify your inte
 
 
 
-               <img src="images/sarina-.png" style="width:100%" class="w3-margin-bottom">
+               <img src="images/sarina-.jpg" style="width:100%" class="w3-margin-bottom">
 
-        <img src="images/sarina.png" style="width:100%" class="w3-margin-bottom">
+        <img src="images/sarina.jpg" style="width:100%" class="w3-margin-bottom">
 
        <p>
  "Line Follower Robot🚜" 
